# wuss-pos-server

email-sender/: .env.example  Cargo.toml  Dockerfile
email-sender/src/: handler.rs  main.rs
email-sender/src/pubsub/: mod.rs  service.rs
email-sender/src/task/: error.rs  mod.rs  model.rs  service.rs
email-sender/src/task/model/: error.rs  mod.rs  model.rs  task.rs
env/: .env.example  Cargo.toml
env/src/: lib.rs
user-model-mongo/: Cargo.toml
user-model-mongo/src/: lib.rs  model.rs  types.rs
user_model/: Cargo.toml
user_model/src/: error.rs  lib.rs  model.rs  types.rs
user_server/: Cargo.toml  build.rs
user_server/proto/: user.proto
user_server/src/: main.rs  service.rs
