[package]
name = "email-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.23.0", features=["full"]}
warp = "0.3"
serde = {version="1", features=["derive"]}
serde_json = "1"
base64 = "0.20"
mongodb = "2.3.1"
tokio-stream = "0.1.11"
dotenv = "0.15.0"
