[package]
name = "user-model-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "user_model"
crate-type = ["dylib"]

[dependencies]
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
tokio = "1.25.0"
