[package]
name = "user_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
prost = "0.11.6"
serde = "1.0.152"
tokio = "1.25.0"
tonic = "0.8.3"
user_model = { path="../user_model" }
env = {path = "../env"}

[build-dependencies]
tonic-build = "0.8.4"
